# cnpj

./: .gitignore  .gitignore.txt  Entrada.py  README.md  Untitled-1.py  aiohttp.py  chamadas.py  chamadas_flask.py  chamadas_versao_01.py  cnae.py  cnpj.py  cnpj_teste.py  cnpj_versao_01.py  cnpj_versao_02.py  colecao.py  config.py  csv.py  duckdb  endereco.py  estabelecimentos.py  example.env  ibge.py  load_settings.py  logging_config.py  main.py  municipios.py  nominatim coordenadas.py  nominatim json.py  nominatim.py  nominatim_versao_01.py  nominatim_versao_02.py  nominatim_versao_03.py  open_address.md  open_address.py  open_adress.py  organiza_csv.py  processa.py  pyproject.toml  requests.py  resultado.py  (+4 more)
Old/: csv_v01.py
app/: __ini__.py
app/core/: config.py
app/sco/: __init__.py
app/scripts/: CNPJ.sql
core/: config.py
old/: nominatim.py  open_adress.py
sco/: __init__.py
scripts/: CNPJ.sql
