[tool.poetry]
name = "layer-upload"
version = "0.1.0"
description = ""
authors = ["Ribeiro, Francisco <francisco.ribeiro@aecom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.1.2"
pydantic = "^2.9.2"
pydantic-config = "^0.3.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"